--- a/mobifone_meet_platform_interface/pubspec.yaml
+++ b/mobifone_meet_platform_interface/pubspec.yaml
@@ -1,7 +1,7 @@
-name: jitsi_meet_platform_interface
-description: A common platform interface for the jitsi meet plugin.
+name: mobifone_meet_platform_interface
+description: A common platform interface for the mobifone meet plugin.
 version: 2.0.0
-homepage: https://github.com/gunschu/jitsi_meet
+homepage: https://github.com/haonv151168/jitsi_meet
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
