--- a/mobifone_meet/example/pubspec.yaml
+++ b/mobifone_meet/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  jitsi_meet:
+  mobifone_meet:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
